--- a/config.env
+++ b/config.env
@@ -17,5 +17,7 @@ EMAIL_PASSWORD_PROD=SG.7oxD7cKQTqafeAssrJl44w.P5BVOSulvdLIHPrTC5-dip7ocwTjhWpqDz
 EMAIL_HOST_PROD=smtp.sendgrid.net
 EMAIL_PORT_PROD=2525
 
+EMAIL_ADMIN=eliav.s.cohen@gmail.com
+
 JWT_SECRET=aQreHGe??r648YUu$yURwFIKT)p4-sPbs
 JWT_EXPIRES_IN=90d
