--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start:dev": "nodemon server.js",
     "start:prod": "cross-env NODE_ENV=\"production\" nodemon server.js",
     "start:debug": "ndb server.js",
-    "emptyToursSimple": "node dev-data/data/import-dev-data.js --delete",
-    "populateToursSimple": "node dev-data/data/import-dev-data.js --import",
-    "emptyUsersSimple": "node dev-data/data/import-dev-data-users.js --delete",
-    "populateUsersSimple": "node dev-data/data/import-dev-data-users.js --import"
+    "emptyTours": "node dev-data/data/import-dev-data.js --delete",
+    "populateTours": "node dev-data/data/import-dev-data.js --import",
+    "emptyUsers": "node dev-data/data/import-dev-data-users.js --delete",
+    "populateUsers": "node dev-data/data/import-dev-data-users.js --import"
   },
   "repository": {
     "type": "git",
@@ -22,13 +22,19 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^5.0.0",
+    "helmet": "^3.21.0",
+    "hpp": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
     "nodemailer-smtp-transport": "^2.7.4",
+    "rate-limit": "^0.1.1",
     "slugify": "^1.3.4",
-    "validator": "^11.1.0"
+    "validator": "^11.1.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.1",
