--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
+    "express-sass-middleware": "^1.1.0",
     "helmet": "^3.21.0",
     "hpp": "^0.2.2",
     "html-to-text": "^5.1.1",
