--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "node-sass": "^4.12.0",
+    "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.3.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "pug": "^2.0.4",
