--- a/config.env
+++ b/config.env
@@ -16,6 +16,8 @@ EMAIL_USERNAME_PROD=apikey
 EMAIL_PASSWORD_PROD=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
 EMAIL_HOST_PROD=smtp.sendgrid.net
 EMAIL_PORT_PROD=2525
+EMAIL_FROM=<eliav.co@eliavco.com>
+EMAIL_FROM_NAME=EliavCohen
 
 EMAIL_ADMIN=eliav.s.cohen@gmail.com
 
