--- a/config.env
+++ b/config.env
@@ -23,3 +23,9 @@ EMAIL_ADMIN=eliav.s.cohen@gmail.com
 
 JWT_SECRET=aQreHGe??r648YUu$yURwFIKT)p4-sPbs
 JWT_EXPIRES_IN=90d
+
+STRIPE_MODE=T
+STRIPE_SECRET_KEY_TEST=sk_test_zhkY4UNO1bMDumoA28uyxrl100EY0fDb7z
+STRIPE_PUBLIC_KEY_TEST=pk_test_G2AZJSnZeT0OX7gCsFG8eWFG002Z9UEJwO
+STRIPE_SECRET_KEY_LIVE=sk_test_zhkY4UNO1bMDumoA28uyxrl100EY0fDb7z
+STRIPE_PUBLIC_KEY_LIVE=pk_test_G2AZJSnZeT0OX7gCsFG8eWFG002Z9UEJwO
