--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "startServer:dev": "nodemon server.js",
     "start:prod": "cross-env NODE_ENV=\"production\" nodemon server.js",
     "start:debug": "ndb server.js",
-    "build:js": "parcel ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "emptyAndPopulateData": "node dev-data/data/import-dev-data.js --empop",
     "emptyData": "node dev-data/data/import-dev-data.js --delete",
